[package]
name = "debussy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.34"
dotenvy = "0.15.7"
md5 = "0.7.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
